Fix alignment on select elements

--- a/Duplicati/Server/webroot/ngax/less/form.less
+++ b/Duplicati/Server/webroot/ngax/less/form.less
@@ -85,13 +85,15 @@ form.styled {
 
     .input.select {
         select {
+            --height: 38px;
+
             width: 446px;
             padding: 0 12px;
             -webkit-appearance: menulist-button;
             background: white;
             border-radius: 2px;
-            height: 38px;
-            line-height: 38px;
+            height: var(--height);
+            line-height: var(--height);
         }
     }
 
